fix header being pushed down page by wp menu/ content being visible scrolling behind

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ header {
   width: 100%;
   height: 65px;
   z-index: 999;
+  top: 0;
 }
 
 .header-outer-inner {
